# next-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs  run.rs  update.rs
src/cli/: args.rs
src/domain/: http_method.rs  mod.rs  request.rs  resource_name.rs
src/generation/: artifact.rs  controller.rs  handler.rs  mod.rs  plan.rs  renderer.rs  route.rs
src/io/: writer.rs
src/templates/: controller_delete.ts.tmpl  controller_get.ts.tmpl  controller_post.ts.tmpl  controller_preamble.ts.tmpl  controller_put.ts.tmpl  handler_delete.ts.tmpl  handler_get.ts.tmpl  handler_post.ts.tmpl  handler_put.ts.tmpl  route_export_delete.ts.tmpl  route_export_get.ts.tmpl  route_export_post.ts.tmpl  route_export_put.ts.tmpl  route_import_delete.ts.tmpl  route_import_get.ts.tmpl  route_import_post.ts.tmpl  route_import_put.ts.tmpl
tests/: integration.rs
